syntax = "proto3";

package chain.v1;

import "chain/v1/account.proto";
import "chain/v1/ddex.proto";

option go_package = "github.com/sonata-labs/sonata/gen/chain/v1";

message SignedTransaction {
  Transaction transaction = 1;
  TransactionSignature signature = 2;
}

message TransactionSignature {
  bytes signature = 1;
}

message Transaction {
  TransactionHeader header = 1;
  TransactionBody body = 2;
}

message TransactionHeader {
  string chain_id = 1;
  uint64 nonce = 2;
  uint64 gas_price = 3;
  uint64 gas_limit = 4;
  uint64 timeout = 5;
  string sender = 6;
  string recipient = 7;
}

message TransactionBody {
  oneof body {
    chain.v1.NewReleaseTransaction new_release = 1;
    chain.v1.CatalogListTransaction catalog_list = 2;
    chain.v1.PurgeReleaseTransaction purge_release = 3;
    chain.v1.PieTransaction pie = 4;
    chain.v1.PieRequestTransaction pie_request = 5;
    chain.v1.MeadTransaction mead = 6;
    chain.v1.CreateAccountTransaction create_account = 7;
  }
}

message TransactionEvent {
  oneof event {
    chain.v1.NewReleaseEvent new_release = 1;
    chain.v1.CatalogListEvent catalog_list = 2;
    chain.v1.PurgeReleaseEvent purge_release = 3;
    chain.v1.PieEvent pie = 4;
    chain.v1.PieRequestEvent pie_request = 5;
    chain.v1.MeadEvent mead = 6;
    chain.v1.CreateAccountEvent create_account = 7;
  }
}
